--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,19 +6,7 @@
   .about {
     width: 500px;
     margin: 0 auto;
-    clip-path: polygon(
-      68% 9%,
-      91% 14%,
-      100% 35%,
-      100% 70%,
-      80% 90%,
-      60% 92%,
-      10% 73%,
-      0 48%,
-      8% 26%,
-      27% 12%
-    );
-  }
+    clip-path: polygon(50% 0%, 83% 12%, 100% 43%, 94% 78%, 68% 100%, 32% 100%, 6% 78%, 0% 43%, 17% 12%);  }
   .faq {
     margin: 0 auto;
     clip-path: circle(50% at 50% 50%);
