--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,11 +2,29 @@
 @tailwind components;
 @tailwind utilities;
 
+/* @layer base {
+  body {
+    max-width: 1600px;
+    margin: 0 auto;
+  }
+} */
+
 @layer utilities {
   .about {
     width: 500px;
     margin: 0 auto;
-    clip-path: polygon(50% 0%, 83% 12%, 100% 43%, 94% 78%, 68% 100%, 32% 100%, 6% 78%, 0% 43%, 17% 12%);  }
+    clip-path: polygon(
+      50% 0%,
+      83% 12%,
+      100% 43%,
+      94% 78%,
+      68% 100%,
+      32% 100%,
+      6% 78%,
+      0% 43%,
+      17% 12%
+    );
+  }
   .faq {
     margin: 0 auto;
     clip-path: circle(50% at 50% 50%);
