--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-
 @layer utilities {
+  .scrollbar-thin::-webkit-scrollbar {
+    width: 6px;
+  }
+
   .about {
     width: 500px;
     margin: 0 auto;
